--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Museum</title>
+    <title>Museums</title>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Reggae+One&display=swap" rel="stylesheet">
@@ -74,7 +74,7 @@
         <div class="container">
         <div class="footer_info">        
             <p>&copy; Оформление сайта. Н. А. Яковлев, 2021</p>  <br>
-            <a href="#"> www.nikita723.github.io/Colors-Seas</a> 
+            <a href="#"> www.nikita723.github.io/Museums</a> 
         </div>
          <nav>
                 <ul class="list">
